# routes/index.js
@@ -17,14 +17,4 @@ router.use('/authors', require('./authors'));
 // Swagger Docs
 router.use('/api-docs', require('./swagger'));
 
-
-router.get('/login', passport.authenticate('github'), (req, res) => {});
-
-router.get('/logout', function (req, res, next) {
-    req.logout(function(err) {
-        if (err) { return next(err); }
-        res.redirect('/')
-    });
-});
-
 module.exports = router;
